--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
-    </style>
+      @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
+      </style>
     <title>React App</title>
   </head>
   <body>
